# desk-disp

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
docs/: cpal-wasapi-crash-investigation.md
scripts/: check-events.ts  gen-licenses.mjs  reset-dev-config.mjs
src/: App.css  App.tsx  ffi_types.ts  hooks.tsx  main.ts  sketch.js  styles.css  types.ts  useConfig.tsx  utils.ts  widgetTypes.ts
src-tauri/: Cargo.toml  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/dark/: icon.icns
src-tauri/icons/light/: icon.icns
src-tauri/layouts/: default.json  media-highlight.json  minimal-media.json
src-tauri/src/: cli.rs  config.rs  error.rs  events.rs  lib.rs  logging.rs  main.rs
src-tauri/src/config/: commands.rs  file.rs  mod.rs  widget.rs
src-tauri/src/media/: linux_media.rs  mod.rs  windows_media.rs
src-tauri/src/system/: mod.rs
src-tauri/themes/: catppuccin-mocha.css  catppuccin-mocha.json  dark.css  dark.json  dracula.css  dracula.json  gruvbox-dark.css  gruvbox-dark.json  light.css  light.json  nord.css  nord.json  rose-pine.css  rose-pine.json  solarized-dark.css  solarized-dark.json  solarized-light.css  solarized-light.json
src/components/: Disks.tsx  EditGrid.tsx  FftBars.tsx  Loading.tsx  MediaInfo.tsx  Networks.tsx  Onboarding.tsx  PerfBox.tsx  TimeDate.tsx  VUBars.jsx  Visualiser.tsx  Weather.tsx  Widget.tsx  WidgetSettingsPanel.tsx  WindowControls.tsx
src/components/inputs/: ColorInput.tsx  InputGroup.tsx  NumberInput.tsx  RangeInput.tsx  SelectInput.tsx  TextInput.tsx  ToggleInput.tsx  index.ts
src/components/styles/: Disks.module.css  EditGrid.module.css  Loading.module.css  MediaInfo.module.css  Networks.module.css  Onboarding.css  Onboarding.module.css  PerfBox.module.css  TimeDate.module.css  Visualiser.module.css  Weather.module.css  (+2 more)
src/context/: EditModeContext.tsx  PersistenceContext.tsx  WidgetDimsContext.tsx
src/hooks/: index.ts  useClock.ts  useConfig.ts  useDebouncedCallback.ts  useHistory.ts  useInterval.ts  useSmoothed.ts  useSubscription.ts  useTheme.ts
src/ipc/: events.ts  index.ts  invoke.ts  listen.ts
src/primitives/: Bar.tsx  Button.tsx  ChipInput.tsx  FontStackInput.tsx  Input.tsx  LineGraph.tsx  Modal.tsx  Panel.tsx  PieChart.tsx  Range.tsx  Readout.tsx  SelectBase.tsx  Separator.tsx  Text.tsx  Toggle.tsx  VBar.tsx  color.ts  index.ts  layout.tsx
src/registry/: defRegistry.ts  instanceRegistry.ts
src/utils/: config.ts  fonts.ts  format.ts  logger.ts  stats.ts  validation.ts  widgetErrors.ts
src/widgets/: Grid.tsx  register.ts  widget.tsx
(+57 files in other folders)
