[package]
name = "desk-disp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desk_disp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62.0", features = [
    "Media_Control",
    "Storage_Streams",
    "Foundation_Collections",
] }
sysinfo = "0.37.0"
base64 = "0.22.1"
num_cpus = "1.17.0"
reqwest = {version = "0.12.23", features = ["json", "blocking"] }
cpal = "0.16.0"
rustfft = "6.4.0"
dirs = "6.0.0"
tauri-plugin-devtools = "2.0.0"
